// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/CardHalf by default does not render buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`components/CardHalf by default renders the word 1`] = `
<div
  class="word"
>
  
    THE WORD
  
</div>
`;

exports[`components/CardHalf when pressed renders buttons 1`] = `
<div
  class="button-group"
>
  <button
    class="reset"
  />
   
  <button
    class="assassin"
  />
   
  <button
    class="bystander"
  />
   
  <button
    class="agent"
  />
</div>
`;

exports[`components/CardHalf when pressed twice hides the buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`components/CardHalf when the agent button is pressed hides the buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`components/CardHalf when the assassin button is pressed hides the buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`components/CardHalf when the bystander button is pressed hides the buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;

exports[`components/CardHalf when the reset button is pressed hides the buttons 1`] = `
<div
  class="button-group"
>
  <!---->
   
  <!---->
   
  <!---->
   
  <!---->
</div>
`;
